<resources>
    <string name="app_name">AND</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Martin</string>
    <string name="nav_header_subtitle">279938@via.dk</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">You sneaky boi</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search History</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
